--- a/_config.yml
+++ b/_config.yml
@@ -2,8 +2,8 @@
 title: PHOTORAMA
 email: ""
 description: "Photo Journal"
-url: "https://sunbliss.github.io"
-baseurl: "/photorama"
+url: "https://oasisnoehub.github.io"
+baseurl: "/oasis-journey"
 facebook_username: ""
 twitter_username: ""
 instagram_username: ""
