doc: change home page info.

--- a/_config.yml
+++ b/_config.yml
@@ -5,9 +5,9 @@ description: "OASISNOE Travel Journal"
 url: "https://oasisnoehub.github.io"
 baseurl: "/oasis-journey"
 facebook_username: ""
-twitter_username: ""
-instagram_username: ""
-github_username:  ""
+twitter_username: "@YLYin257410"
+instagram_username: "osis_not"
+github_username:  "oasisnoehub"
 deviantart_username: ""
 flickr_username: ""
 discus_shortname: ""
