doc: change home page info.

--- a/bower.json
+++ b/bower.json
@@ -1,10 +1,10 @@
 {
-  "name": "photorama",
-  "description": "Photo Journal",
+  "name": "OsisnoeJ",
+  "description": "Travel Photo Journal",
   "main": "index.html",
   "moduleType": [],
   "authors": [
-    "Anna Prigkipaki"
+    "Rae Yin"
   ],
   "license": "Apache-2.0",
   "homepage": "",
