[doc]: change author with correct format.

--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,7 @@ share: true
 
 # Owner/author information
 owner:
-  name:   YIN YILING
+  name:   YILING YIN
   avatar: avatar.png
   favicon: favicon.ico
   info: oasisnoe's photography website 
